<resources>
    <string name="app_name" translatable="false">Battery Charger Animation</string>
    <string name="ask_grant_permission">Please grant Battery Charger Animation necessary permissions to protect your phone privacy</string>
    <string name="storage_permission_text">Storage</string>
    <string name="continue_text">Continue</string>
    <string name="overlay_permission_text">Display over other apps</string>
    <string name="permission_not_allowed">Permission is not allowed</string>
    <string name="permission_allowed">Permission allowed</string>
    <string name="home">Home</string>
    <string name="gallery">Gallery</string>
    <string name="settings">Settings</string>
    <string name="battery_charger">Battery charger</string>
    <string name="used">Used</string>
    <string name="uploaded">Uploaded</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="select">Select</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="about_app">About App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="help_guides">Help And Guides</string>
    <string name="more_app">More App</string>
    <string name="install">Install</string>
    <string name="result_congratulation">Done! Charge your phone now anh this amazing effect will appear</string>
    <string name="english">English</string>
    <string name="ads_warn">This action may contain ads</string>
    <string name="next">Next</string>
    <string name="onboard_title1">All you need for your charging screen</string>
    <string name="onboard_title2">Customization - express individuality</string>
    <string name="onboard_title3">Create and personalize your own charging screen</string>
    <string name="get_started">Get started</string>
    <string name="folder_name">animation_video</string>
    <string name="notification_title">App is running</string>
    <string name="notification_content">Touch to open app</string>
    <string name="sound">Sound</string>
    <string name="set_animation">Set Animation</string>
    <string name="play_duration">Play Duration</string>
    <string name="closing_method">Closing Method</string>
    <string name="duration_5s">5s</string>
    <string name="duration_10s">10s</string>
    <string name="duration_30s">30s</string>
    <string name="duration_always">Always</string>
    <string name="apply">Apply</string>
    <string name="single_tap">Single Tap</string>
    <string name="double_tap">Double Tap</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="check_out_this_amazing_app">"Check out this amazing app: "</string>
    <string name="share_via">Share via</string>
    <string name="we_are_working_hard_for_a_better_user_experience">We are working hard for a better user experience</string>
    <string name="we_d_greatly_appreciate_if_you_rate_us">We\\\'d greatly appreciate if you rate us</string>
    <string name="the_best_rating_star">The best rating star</string>
    <string name="email_feedback_title">[Android] Feedback Call Theme version: %1$s</string>
    <string name="rate_your_experience">Rate your experience</string>
    <string name="exit_popup_message">We love to hear from you. Help us make our app even more awesome</string>
    <string name="no_exit">exit app</string>
    <string name="ok">Ok</string>
    <string name="please_check_your_connnection">Please check your connect</string>
    <string name="internet_error">Internet Error</string>
    <string name="permission_required">Permission Required</string>
    <string name="help">Help</string>
    <string name="preview">Preview</string>
    <string name="complete_dialog_text">Done!\nCharge your phone now and this amazing effect will appear.</string>
    <string name="got_it">Got it!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floating_window">Floating Window</string>
    <string name="ignore_battery_optimization">Ignore Battery optimization</string>
    <string name="help_option_1_content">Turn “Floating Window” on to show up charging animation</string>
    <string name="help_option_2_content">If the animation does not work, you can try turning on “Ignore battery optimization”</string>
    <string name="policy">Policy</string>
    <string name="load_error">There is some thing wrong! Please restart app</string>
    <string name="battery_remaining">Battery Remaining</string>
    <string name="battery_info">Battery Info</string>
    <string name="battery_type">Battery Type</string>
    <string name="tempurate">Temperature</string>
    <string name="voltage">Voltage</string>
    <string name="battery_health">Battery Health</string>
    <string name="battery_capacity">Capacity</string>
    <string name="charging_type">Charging Type</string>
    <string name="plugged">Plugged</string>
    <string name="unplugged">Unplugged</string>
    <string name="have_you_ever_tried_there_charging_animation">Have you ever tried these charging animation?</string>
    <string name="enjoy_customize_charging_animation">Let’s customize your own battery animation now! Enjoy it!</string>
    <string name="try_this_animation">Try this animation</string>
    <string name="your_best_battery_charger">Your Best Battery Charger!</string>
    <string name="customize_your_charging_now">Customize your charging animation now.</string>
    <string name="start_charging">Start Charging</string>
    <string name="current_charging">Current Charge: %d%% </string>
</resources>