<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nav_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nav_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            app:fontWeight="1000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="26dp"
        android:paddingTop="10dp"
        android:text="@string/general"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nav_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/choose_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="10dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="15dp"
        android:background="@drawable/bg_setting_item"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_setting_language"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tint="@color/green_500"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/language"/>

        <TextView
            android:id="@+id/curLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tailIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="English"/>

        <ImageView
            android:id="@+id/tailIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chevron_right_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app"
        android:paddingHorizontal="26dp"
        android:paddingTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_language"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_setting_item"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview2">
        <com.example.videoart.batterychargeranimation.ui.custom.ItemSetting
            android:id="@+id/policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:headIcon="@drawable/ic_lock"
            app:tailIcon="@drawable/chevron_right_24"
            app:text="@string/policy"
            />
        <com.example.videoart.batterychargeranimation.ui.custom.ItemSetting
            android:id="@+id/share_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headIcon="@drawable/ic_share"
            app:tailIcon="@drawable/chevron_right_24"
            app:text="@string/share_app"
            />
        <com.example.videoart.batterychargeranimation.ui.custom.ItemSetting
            android:id="@+id/rate_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headIcon="@drawable/ic_rate"
            app:tailIcon="@drawable/chevron_right_24"
            app:text="@string/rate_app"
            />
        <com.example.videoart.batterychargeranimation.ui.custom.ItemSetting
            android:id="@+id/help_and_guides"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headIcon="@drawable/ic_help"
            app:tailIcon="@drawable/chevron_right_24"
            app:text="@string/help_guides"
            android:visibility="gone"
            />
        <com.example.videoart.batterychargeranimation.ui.custom.ItemSetting
            android:id="@+id/more_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:headIcon="@drawable/ic_more_app"
            app:tailIcon="@drawable/chevron_right_24"
            app:text="@string/more_app"
            />

        <com.example.videoart.batterychargeranimation.ui.custom.ItemSetting
            android:id="@+id/privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:headIcon="@drawable/ic_lock"
            app:tailIcon="@drawable/chevron_right_24"
            app:text="@string/privacy_policy"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>