<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/empty_item"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty_data"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/list_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        android:gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/list_btn_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:visibility="gone">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#1D2728"
                app:cornerRadius="10dp"
                android:text="@string/cancel"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_all_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:backgroundTint="#1D2728"
                android:text="@string/select_all"
                app:cornerRadius="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_btn_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/sort_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#1D2728"
                app:cornerRadius="10dp"
                android:text="@string/ascending"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:backgroundTint="#1D2728"
                android:text="@string/select"
                app:cornerRadius="10dp"/>
        </LinearLayout>

    </FrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_item"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_btn_layout"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_new_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/green_500"
        app:shapeAppearanceOverlay="@style/fab_rounded"
        app:tint="@color/white"
        android:src="@drawable/ic_add"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        app:backgroundTint="@color/red_400"
        android:text="@string/delete"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>