<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_dialog_bg">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="10dp"
        android:text="@string/play_duration"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_24_sp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/option_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp">

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_5s"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18_sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radiobtn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/bottom_select_radio_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/option_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/option_1"
        app:layout_constraintStart_toStartOf="@id/option_1"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp">

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_10s"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18_sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radiobtn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/bottom_select_radio_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/option_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/option_2"
        app:layout_constraintStart_toStartOf="@id/option_2"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp">

        <TextView
            android:id="@+id/tv_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_30s"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18_sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radiobtn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/bottom_select_radio_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/option_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/option_3"
        app:layout_constraintStart_toStartOf="@id/option_3"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp">

        <TextView
            android:id="@+id/tv_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_always"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18_sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radiobtn_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/bottom_select_radio_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/apply"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18_sp"
        android:layout_marginBottom="10dp"
        app:backgroundTint="@color/green_500"
        app:rippleColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option_4" />

</androidx.constraintlayout.widget.ConstraintLayout>