<!-- custom_dialog.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="60dp"
    android:background="@drawable/rating_dialog_bg"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:text="@string/we_are_working_hard_for_a_better_user_experience"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="@dimen/space_24dp"
        android:layout_height="@dimen/space_24dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_close"
        app:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">


        <TextView
            android:id="@+id/you_rate_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/we_d_greatly_appreciate_if_you_rate_us"
            android:textColor="@color/neutral_700"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <com.example.videoart.batterychargeranimation.ui.custom.CustomRatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:emptyLastStarDrawable="@drawable/ic_star_smile_outline"
                app:emptyStarDrawable="@drawable/ic_star_outline"
                app:filledLastStarDrawable="@drawable/ic_star_smile_filled"
                app:filledStarDrawable="@drawable/ic_star_filled"
                app:maxRating="5"
                app:starSpacing="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/the_best_rating_star"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_arrow_move_up_right" />
            </LinearLayout>

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/rateUsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/set_call_theme_button_bg"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/rate_us"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
            app:layout_constraintWidth_percent="0.9" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>